// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManagerResults allowHeaders renders component 1`] = `
<section>
  <p
    className="heading"
  >
    <span
      className="traitify--icon-fa"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"table-columns\\" class=\\"svg-inline--fa fa-table-columns\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zm64 64V416H224V160H64zm384 0H288V416H448V160z\\"></path></svg>",
        }
      }
    />
     
    recommendation_chart_heading, [object Object]
  </p>
  <p>
    recommendation_chart_description, [object Object]
  </p>
  <div
    className="mock"
  >
    Personality Recommendation Chart
  </div>
  <p
    className="heading"
  >
    <span
      className="traitify--icon-fa"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"table-cells-large\\" class=\\"svg-inline--fa fa-table-cells-large\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M448 96V224H288V96H448zm0 192V416H288V288H448zM224 224H64V96H224V224zM64 288H224V416H64V288zM64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z\\"></path></svg>",
        }
      }
    />
     
    interview_guide_heading, [object Object]
  </p>
  <p>
    interview_guide_description, [object Object]
  </p>
  <div
    className="mock"
  >
    Guide
  </div>
</section>
`;

exports[`ManagerResults renders component 1`] = `
<section>
  <div
    className="mock"
  >
    Personality Recommendation Chart
  </div>
  <div
    className="mock"
  >
    Guide
  </div>
</section>
`;
